--- a/.env
+++ b/.env
@@ -1,1 +1,31 @@
+# -----------------------------
+# API Connection
+# -----------------------------
 VITE_API_BASE=https://botari-backend.onrender.com
+
+# -----------------------------
+# Authentication
+# -----------------------------
+# Key used for storing JWT in localStorage
+VITE_JWT_STORAGE_KEY=jwt
+
+# -----------------------------
+# WhatsApp Widget (optional)
+# -----------------------------
+# If you want a floating WhatsApp chat button on frontend
+VITE_WHATSAPP_NUMBER=+233XXXXXXXXX
+VITE_WHATSAPP_GREETING="Welcome to Botari AI! How can we help you today?"
+
+# -----------------------------
+# Payments (Stripe/Paystack)
+# -----------------------------
+# Public keys only (safe for frontend)
+VITE_STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key_here
+VITE_PAYSTACK_PUBLIC_KEY=pk_test_your_paystack_public_key_here
+
+# -----------------------------
+# Branding / UI
+# -----------------------------
+VITE_APP_NAME=Botari
+VITE_PRIMARY_COLOR=#007bff
+VITE_SECONDARY_COLOR=#343a40
