--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,5 +20,5 @@
     "noUncheckedSideEffectImports": true
   },
   "include": ["src", "src/global.d.ts"],
-  "exclude": ["src/__tests__"]
+  "exclude": ["src/__tests__", "**/*.test.tsx", "**/*.spec.tsx"]
 }
