Exclude test files from root tsconfig for Vercel build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.app.json",
   "include": ["src", "src/global.d.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["src/__tests__", "**/*.test.tsx", "**/*.spec.tsx"]
 }
