Add Team page, Paystack integration, country dropdown, Dashboard, Analytics, Conversations - Thursday launch ready

--- a/.env
+++ b/.env
@@ -1,31 +1,27 @@
-# -----------------------------
-# API Connection
-# -----------------------------
-VITE_API_BASE=https://botari-backend.onrender.com
+# ==========================================
+# BOTARI FRONTEND - ENVIRONMENT VARIABLES
+# ==========================================
+# NOTE: These are PUBLIC (visible in browser) 
+# NEVER put secret keys here - only public keys & URLs
 
 # -----------------------------
-# Authentication
+# API Connection (REQUIRED)
 # -----------------------------
-# Key used for storing JWT in localStorage
+VITE_API_URL=https://botari-backend.onrender.com
+
+# -----------------------------
+# Payments - Paystack (TEST MODE - Thursday Launch)
+# -----------------------------
+VITE_PAYSTACK_PUBLIC_KEY=pk_test_50a4fec229754cf7e76eb7f13b335542e8d6d2f2
+
+# -----------------------------
+# App Configuration
+# -----------------------------
+VITE_APP_NAME=Botari
 VITE_JWT_STORAGE_KEY=jwt
 
 # -----------------------------
-# WhatsApp Widget (optional)
+# Branding (Dark Theme)
 # -----------------------------
-# If you want a floating WhatsApp chat button on frontend
-VITE_WHATSAPP_NUMBER=+233XXXXXXXXX
-VITE_WHATSAPP_GREETING="Welcome to Botari AI! How can we help you today?"
-
-# -----------------------------
-# Payments (Stripe/Paystack)
-# -----------------------------
-# Public keys only (safe for frontend)
-VITE_STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key_here
-VITE_PAYSTACK_PUBLIC_KEY=pk_test_your_paystack_public_key_here
-
-# -----------------------------
-# Branding / UI
-# -----------------------------
-VITE_APP_NAME=Botari
-VITE_PRIMARY_COLOR=#007bff
-VITE_SECONDARY_COLOR=#343a40
+VITE_PRIMARY_COLOR=#E2725B
+VITE_SECONDARY_COLOR=#000000
