--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
   "rewrites": [
     { "source": "/((?!api/).*)", "destination": "/" }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://botari-backend.onrender.com https://api.paystack.co https://*.vercel.app;"
+        }
+      ]
+    }
   ]
 }
